--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
+        StarWars API
         <button onclick="writeToDocument('people')">People</button>
         <button onclick="writeToDocument('planets')">Planets</button>
         <button onclick="writeToDocument('species')">Species</button>
